[tool.poetry]
name = "py_scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.12.17"
ffmpeg = "^1.4"
isort = "^5.10.1"
black = "^22.6.0"
yt-dlp = "^2022.7.18"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
